--- a/index.html
+++ b/index.html
@@ -5,59 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="container">
         <div>
-            <form>
             <h1>Welcome to our Community!</h1>
             <img src="undraw.svg">
-            </form>
         </div>
-        <div class="container">
+
+        <div class="container2">
             <form>
                 <h1>Create Account</h1>
                 <p>Sign up to your account below.</p>
-               <label for="firstname">First Name:</label>
-               <br>   
-                <br/>
-                <input name="firstname" type="text"class="input"/>
-               <label for="lastname">Last Name:</label>
-               <br>   
-               <br/>
-               <input name="lastname" type="text"class="input"/>
+
+                <div class="grid"> 
+                <label for="firstname">First Name:</label> 
                 <br>
+                <input name="firstname" type="text"class="input"/>
+                <br>
+                <br>
+                </div>
+                <div class="grid">
+                <label for="lastname">Last Name:</label> 
+                <br>
+                <input name="lastname" type="text"class="input"/>
+                <br>
+                <br>
+                </div>
+
                 <br/>
                 <label for="email">Email Address:</label>
-                <br>
                 <br/>
                 <input name="email" type="email"class="input"/>
-                <br/>
+                <br>
                 <br/>
                 <label for="password">Password:</label>
-                <br>
-                <br/>
-                <input name="password" type="password" class="input"/>
-                <br/>
-                <br/>
-                <label for="confirm password">Confirm password</label>
-                <br>
                 <br/>
                 <input name="password" type="password" class="input"/>
                 <br>
                 <br/>
-
+                <label for="confirm password">Confirm password:</label>
+                <br/>
+                <input name="password" type="password" class="input"/>
+                <br>
+                <br/>
                 <button id="button" type="create account" class="input">Create Account</button>
+                <br>
                 <br/>
-                <br/>
-                <p>Already have an account?</p>
-                <p>____________Or_______________</p>
+                <p>Already have an account?<a href="sign in">Sign In</a></p>
+                <p>_____________________Or______________________</p>
+<div class="icons">
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="google.png" id="google">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="facebook.png" id="fb">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="apple.png" id="apple">
+    
+</div>
             </form>
             
         </div>
-        <i class="fa-brands fa-google"></i> 
-        <i class="fa-brands fa-facebook-f"></i>
     </div>
 
 
